--- a/src/index.html
+++ b/src/index.html
@@ -4,40 +4,63 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MUI Landing Page Example</title>
+    <title>My webpack practice
+    </title>
     <link href="//cdn.muicss.com/mui-latest/css/mui.min.css" rel="stylesheet" type="text/css" />
     <script src="//cdn.muicss.com/mui-latest/js/mui.min.js"></script>
   </head>
+
   <body>
+
     <header class="mui-appbar mui--z1">
       <div class="mui-container">
+
         <table>
           <tr class="mui--appbar-height">
-            <td class="mui--text-title">Brand.io</td>
+            <td class="mui--logo-title">HRIPNV</td>
             <td align="mui--text-right">
               <ul class="mui-list--inline mui--text-body2">
-                <li><a href="#">About</a></li>
+                <li><a href="https://github.com/AleksDamsky" target="_blank">About</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Login</a></li>
               </ul>
             </td>
           </tr>
         </table>
+
       </div>
     </header>
+
     <div id="content-wrapper" class="mui--text-center">
       <div class="mui--appbar-height"></div>
       <br>
       <br>
-      <div class="mui--text-display3">Brand.io</div>
-      <br>
-      <br>
-      <button class="mui-btn mui-btn--raised">Get started</button>
+      <div class="mui--text-display3">HRIPNV</div>
     </div>
+
+    <main class="main">
+
+        <div class="main__wrapper">
+
+            <form class="mui-form" id="form">
+                <h1 class="main__introduction">Спроси меня!</h1>
+                <div class="main__divider"></div>
+                <div class="mui-textfield mui-textfield--float-label">
+                  <input type="text" id="question">
+                  <label for="question">Задать вопрос</label>
+                </div>
+                <button type="submit" class="mui-btn mui-btn--accent" id="btn1">Отправить</button>
+              </form>
+
+        </div>
+
+    </main>
+
     <footer>
       <div class="mui-container mui--text-center">
         Made with ♥ by <a href="https://www.muicss.com">MUICSS</a>
       </div>
     </footer>
   </body>
+
 </html>
