--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,12 @@
 
         </div>
 
+        <ul class="main__list">
+          <li class="main__item">
+
+          </li>
+        </ul>
+
     </main>
 
     <footer>
